# thesis

./: .dockerignore  .env  .gitignore  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  RUN_INSTRUCTIONS.md  TOPOLOGY_IMPLEMENTATION.md  plan.md  pr.md  pyproject.toml  quick_start.sh  run.sh  sbm_topology.md
config/: datasets.json  node.config.template.json  node_10.json  node_11.json  scenario.sample.json  scenario.single.json  state-map.json  state-map.sample.json  system-config.sample.json  topology.json
config/nodes/: node_0.json  node_1.json  node_2.json  node_3.json  node_4.json  node_5.json  node_6.json  node_7.json  node_8.json  node_9.json
docker/: docker-compose.6nodes.yml  docker-compose.generated.yml  docker-compose.storage.yml  docker-compose.yml  gateway.Dockerfile  ipfs-bootstrap.sh  node.Dockerfile  registry.Dockerfile  ttp.Dockerfile
docker/prometheus/: prometheus.yml
protos/: secureagg.proto
reports/: implementation_overview.tex
scripts/: generate_compose_from_scenario.py  generate_grafana_dashboard.py  generate_keys.py  node_entrypoint.sh  prepare_data.py  run_cluster.py  run_docker_with_nodes.py  run_mnist_secure_agg.py  run_ttp_with_topology.py  start_cluster.sh  state_map_count.py
src/secure_aggregation/: __init__.py  convergence.py
tests/: test_convergence.py  test_node_service.py  test_system_config.py
tests/communication/: test_aggregator_service.py
tests/config/: test_config.py
tests/crypto/: test_aead.py  test_dh_and_sign.py  test_prg_and_shamir.py
tests/docker/: test_compose.py
tests/integration/: test_mnist_flow.py  (+2 more)
(+60 files in other folders)
